Fix small bugs and layout issues!

--- a/src/app/features/first-buyers/components/property-select-dialog/property-select-dialog.component.scss
+++ b/src/app/features/first-buyers/components/property-select-dialog/property-select-dialog.component.scss
@@ -6,7 +6,6 @@
     background: $blue-medium;
     bottom: 0px;
     width: 100%;
-    height: 14%;
   }
 }
 
@@ -24,9 +23,14 @@
   margin-inline-end: 30px;
   @media (max-width: 600px) {
     position: fixed;
-    bottom: 15px;
+    bottom: 0px;
     width: 100%;
     justify-content: space-evenly;
+    height: 14%;
+    background: $blue-medium;
+    border-top: 1px solid #478ccc;
+    display: flex;
+    align-items: center;
   }
   @media (min-width: 600px) {
     .abort-btn {
